update authentication
